rechart container to overflow auto instead of scroll to fix window os scrolling issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,5 +16,5 @@ body {
 }
 
 .recharts-responsive-container {
-  overflow: scroll;
+  overflow: auto;
 }
